--- a/scene1.html
+++ b/scene1.html
@@ -108,7 +108,7 @@
                 <div flex>
                     <!--images here...-->
                     <div style="height: 11rem; width: 100%;
-                    background: transparent url(//img-9gag-fun.9cache.com/photo/a77AK6m_700b.jpg) no-repeat; background-size: contain"></div>
+                    background: transparent url(images/IGDADKBanner.png)center center no-repeat; background-size: contain"></div>
                 </div>
             </div>
         </div>
