--- a/scene1.html
+++ b/scene1.html
@@ -89,7 +89,9 @@
         <div flex="60" class="center">
             <div layout="row" layout-align="center center">
                 <div flex class="triangle-up"></div>
-                <div flex-grow="" class="top-header">Weird shit that looks cool, and more...</div>
+                <div flex-grow="" class="top-header">
+                    <up-next></up-next>
+                </div>
                 <div flex class="triangle-up"></div>
             </div>
         </div>
