enter deadline from dashboard

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <up-next></up-next>
 
+<deadline></deadline>
+
 <open-scene></open-scene>
 
 <script src="bower_components/angular/angular.js"></script>
