--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <deadline></deadline>
 
+<attention></attention>
+
 <open-scene></open-scene>
 
 <script src="bower_components/angular/angular.js"></script>
