--- a/scene1.html
+++ b/scene1.html
@@ -105,7 +105,7 @@
 <div class="box-bottom">
     <div class="box-attention">
         <div class="box-attention-text _bold">
-            Names and stuff
+            <attention></attention>
         </div>
     </div>
     <div layout="row">
