--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <attention></attention>
 
+<pause></pause>
+
 <open-scene></open-scene>
 
 <script src="bower_components/angular/angular.js"></script>
