--- a/scene1.html
+++ b/scene1.html
@@ -76,6 +76,17 @@
         border-bottom: 2.4rem solid #7FD3D1;
         background: #225378;
     }
+
+    pause {
+        display: block;
+        position: absolute;
+        top: 2rem;
+        bottom: 10rem;
+        width: 100%;
+    }
+    .pause-heading {
+        font-size: 4rem;
+    }
 </style>
 </head>
 
@@ -101,6 +112,7 @@
     </div>
 </div>
 
+<pause></pause>
 
 <div class="box-bottom">
     <div class="box-attention">
