--- a/scene1.html
+++ b/scene1.html
@@ -80,9 +80,11 @@
     pause {
         display: block;
         position: absolute;
-        top: 2rem;
+        top: 2.4rem;
         bottom: 10rem;
         width: 100%;
+        background: #225378;
+        color: #fff;
     }
     .pause-heading {
         font-size: 4rem;
