fix green background when pause is off

--- a/scene1.html
+++ b/scene1.html
@@ -77,7 +77,7 @@
         background: #225378;
     }
 
-    pause {
+    .pause-box {
         display: block;
         position: absolute;
         top: 2.4rem;
