twitter and some minor fixes. Resize to 1280x720 on spawn.

--- a/scene1.html
+++ b/scene1.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div flex="30" class="right">
-            Twitter feed
+            <twitter></twitter>
         </div>
     </div>
 </div>
