layout; smaller bottom bar

--- a/scene1.html
+++ b/scene1.html
@@ -34,29 +34,16 @@
 
 <div class="box-bottom">
     <div class="box-attention">
-        <div class="box-attention-text _bold">
-            <attention></attention>
-        </div>
+        <attention></attention>
     </div>
     <div layout="row">
-        <div flex="30" class="left">
-            <div layout="row" layout-align=" center center">
-                <div flex style="padding: 0 1rem;">
-                    <sponsors></sponsors>
-                </div>
-            </div>
+        <div flex="35" class="left">
+            <sponsors></sponsors>
         </div>
-        <div flex="60" class="center">
-            <div layout="row" layout-align="center center">
-                <div flex>
-                    <div style="height: 10rem;
-                        width: 100%;
-                        background: transparent url(image/ngjlogo.png) no-repeat scroll center center / 16rem auto;
-                    "></div>
-                </div>
-            </div>
+        <div flex="" class="center" layout="row" layout-align="center center"
+            style="background: transparent url(image/ngjlogo.png) no-repeat; background-position: center center;">
         </div>
-        <div flex="30" class="right">
+        <div flex="35" class="right">
             <twitter></twitter>
         </div>
     </div>
