--- a/scene1.html
+++ b/scene1.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>main</title>
-<link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
+<link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
 <link rel="stylesheet" href="fonts/stylesheet.css">
 <link rel="stylesheet" href="style.css">
 </head>
@@ -53,13 +53,13 @@
 
 
 <!--libraries-->
-<script src="bower_components/moment/moment.js"></script>
+<script src="bower_components/moment/min/moment.min.js"></script>
 
 <!--frameverks-->
-<script src="bower_components/angular/angular.js"></script>
-<script src="bower_components/angular-material/angular-material.js"></script>
-<script src="bower_components/angular-animate/angular-animate.js"></script>
-<script src="bower_components/angular-aria/angular-aria.js"></script>
+<script src="bower_components/angular/angular.min.js"></script>
+<script src="bower_components/angular-material/angular-material.min.js"></script>
+<script src="bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="bower_components/angular-aria/angular-aria.min.js"></script>
 
 
 <script src="scene1.js"></script>
