some layout of the dashboard

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 </head>
 <body ng-app="app">
 
-<h3 class="md-headline">Dashboard o' streaming</h3>
+<h3 class="md-headline">
+    Dashboard o' streaming <open-scene></open-scene>
+</h3>
+<p>If you close the dashboard, the collection to the scene is lost. Only open 1 scene.</p>
+
+<p><strong>Settings:</strong></p>
+
 <up-next></up-next>
 
 <deadline></deadline>
@@ -16,7 +22,6 @@
 
 <pause></pause>
 
-<open-scene></open-scene>
 
 <script src="bower_components/angular/angular.js"></script>
 <script src="bower_components/angular-material/angular-material.js"></script>
