--- a/scene1.html
+++ b/scene1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>main</title>
+<title>streaming graphics</title>
 <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
 <link rel="stylesheet" href="fonts/stylesheet.css">
 <link rel="stylesheet" href="style.css">
